fix padding of header on mobile

--- a/source/assets/styles/component/_header.scss
+++ b/source/assets/styles/component/_header.scss
@@ -9,7 +9,7 @@
 	@include flex-row;
 	@include flex-align-center;
 	@include flex-justify-space-between;
-	padding: $spacing-16 0;
+	padding: $spacing-16;
 }
 
 // hide site navigation when screen is < 1023
@@ -30,6 +30,9 @@
 }
 
 @media screen and (min-width: 1023px) {
+	.site-header>.container {
+		padding: $spacing-16 0;
+	}
 
 	// show site navigation when screen is > 1023
 	.site-header__navigation {
